<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_subtitle_text">Start by adding a new product</string>
    <string name="empty_view_title_text">You don\'t have any products yet</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="insert_dummy_product">Insert Dummy Product</string>
    <string name="editor_activity_title_new_product">Add new product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="product_name">Product Name:</string>
    <string name="product_name_hint">Samsung Galaxy S9</string>
    <string name="product_price">Product Price:</string>
    <string name="product_price_hint">340.68</string>
    <string name="currency">$</string>
    <string name="quantity">Quantity:</string>
    <string name="subtract">-</string>
    <string name="default_quantity">1</string>
    <string name="add">+</string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="supplier_name_hint">Emag</string>
    <string name="supplier_phone_number">Supplier Phone Number:</string>
    <string name="supplier_phone_number_hint">0259xxxxxx</string>
    <string name="order_product">Order Product</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes</string>
    <string name="discard_option">Discard</string>
    <string name="keep_editing_option">Keep Editing</string>
    <string name="delete_dialog_msg">Do you want to delete the product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_not_valid_dialog_msg">Your product is not valid</string>
    <string name="empty_phone_number">Phone number cannot be empty if you want to order new products</string>
    <string name="maximum_nr_of_products">You cannot have more that 100 products</string>
    <string name="minimum_nr_of_products">You cannot have negative number of products</string>
    <string name="toast_msg_product_added_successfully">Product added successfully</string>
    <string name="toast_msg_product_updated_successfully">Product updated successfully</string>
    <string name="toast_msg_failed_to_delete">Failed to delete the product</string>
    <string name="toast_msg_deleted_successfully">Product deleted successfully</string>
    <string name="no_product_to_sale">You don\'t have any product to sale</string>
    <string name="sale_recorded">Your sale has been recorded</string>
    <string name="product_name_mandatory">Product Name cannot be empty</string>
    <string name="product_price_mandatory">Product Price cannot be 0 or negative</string>
    <string name="positive_quantity_mandatory">Quantity of the product cannot be negative</string>
    <string name="supplier_name_manadatory">Supplier Name cannot be empty</string>
    <string name="supplier_phone_nr_mandatory">Supplier Phone Number cannot be empty</string>
    <string name="failed_inserting_product">Failed to insert product</string>
</resources>
