<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adriana.inventoryapp.EditProductActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- NAME -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/product_name">
        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/product_name_hint"/>
        </LinearLayout>
    </LinearLayout>

    <!-- PRICE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/product_price">
        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/product_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/product_price_hint"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency">
        </TextView>
    </LinearLayout>

    <!-- QUANTITY -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/quantity">
        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subtract_product_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/subtract">
            </Button>

            <TextView
                android:id="@+id/product_quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/default_quantity">
            </TextView>

            <Button
                android:id="@+id/add_product_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/add">
            </Button>
        </LinearLayout>

    </LinearLayout>

    <!-- SUPPLIER NAME -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/supplier_name">
        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/supplier_name_hint"/>
        </LinearLayout>
    </LinearLayout>

    <!-- SUPPLIER PHONE NUMBER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/supplier_phone_number">
        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/supplier_phone_number_hint"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/order_product">
    </Button>

</LinearLayout>
